Use -Xbootclasspath in jaco scripts for JDKS < 1.4. Use -Djava.endorsed.dirs mechanism with JDK 1.4.