@@ -91,13 +91,25 @@
    </target>
 
    <target name="jaco" depends="init">
+      <!-- Use the java.endorsed.dirs mechanism to replace the SDK CORBA classes with those in jacorb.jar for SDK 1.4 -->
+      <condition property="jaco.classpath" value="-Djava.endorsed.dirs=${JACORB_HOME}/lib -classpath ${JACORB_HOME}/lib/jacorb.jar:${JACORB_HOME}/lib/logkit.jar:${JACORB_HOME}/lib/concurrent.jar:${JACORB_HOME}/lib/antlr.jar:${CLASSPATH}">
+         <equals arg1="${ant.java.version}" arg2="1.4"/>
+      </condition>
+      <condition property="jacobat.classpath" value="-Djava.endorsed.dirs=&quot;${basedir}\lib&quot; -classpath &quot;${basedir}\lib\jacorb.jar;${basedir}\lib\logkit.jar;${basedir}\lib\concurrent.jar;${basedir}\lib\antlr.jar;%CLASSPATH%&quot;">
+         <equals arg1="${ant.java.version}" arg2="1.4"/>
+      </condition>
+      <!-- ... else use -Xbootclaspath for older SDKs -->
+      <property name="jaco.classpath" value="-Xbootclasspath/p:${JACORB_HOME}/lib/jacorb.jar:${JACORB_HOME}/lib/logkit.jar:${JACORB_HOME}/lib/concurrent.jar:${JACORB_HOME}/lib/antlr.jar:${JRE_HOME}/lib/rt.jar:${CLASSPATH}"/>
+      <property name="jacobat.classpath" value="-Xbootclasspath/p:&quot;${basedir}\lib\jacorb.jar;${basedir}\lib\logkit.jar;${basedir}\lib\concurrent.jar;${basedir}\lib\antlr.jar;${java.home}\lib\rt.jar;%CLASSPATH%&quot;"/>    
       <copy overwrite="yes" file="bin/jacotemplate" tofile="bin/jaco" />
       <copy overwrite="yes" file="bin/jacotemplate.bat" tofile="bin/jaco.bat" />
-      <replace file="bin/jaco.bat" token="@@@" value="${basedir}\lib\jacorb.jar;${basedir}\lib\logkit.jar;${basedir}\lib\concurrent.jar;${basedir}\lib\antlr.jar;${java.home}\lib\rt.jar"/>
+      <replace file="bin/jaco.bat" token="@@@CLASSPATH@@@" value="${jacobat.classpath}"/>
       <replace file="bin/jaco" token="@@@JACORB_HOME@@@"
          value="${basedir}" />
       <replace file="bin/jaco" token="@@@JRE_HOME@@@"
          value="${java.home}" />
+      <replace file="bin/jaco" token="@@@CLASSPATH@@@"
+         value="${jaco.classpath}" />
       <chmod file="bin/jaco" perm="ugo+rx"/>
    </target>
 
